# Blue2D

./: .gitignore  CMakeLists.txt  README.md  prepare.bat
app/: CMakeLists.txt  main.cpp
assets/shaders/: basic.frag  basic.vert
blue2d/: Bindable.h  Blue2D.cpp  Blue2D.h  BlueException.cpp  BlueException.h  CMakeLists.txt  Common.h  Display.cpp  Display.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  MsgBox.cpp  MsgBox.h  Shader.cpp  Shader.h  Util.cpp  Util.h  Vertex.h
cmake/: coloredmessage.cmake
